updated CommonServiceSpec type with new field AutoScaleConfig
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/config/crd/bases/operator.ibm.com_commonservices.yaml
+++ b/config/crd/bases/operator.ibm.com_commonservices.yaml
@@ -53,6 +53,9 @@ spec:
                   BYOCACertificate enables the option to replace the cs-ca-certificate with
                   your own CA certificate
                 type: boolean
+              autoScaleConfig:
+                description: AutoScaleConfig is a bool to enable or disable HPA
+                type: boolean
               catalogName:
                 description: |-
                   CatalogName is the name of the CatalogSource that will be used for ODLM
