--- a/bedrock-migration/templates/rbac.yaml
+++ b/bedrock-migration/templates/rbac.yaml
@@ -3,9 +3,6 @@ kind: ServiceAccount
 metadata:
   name: bedrock-migration-job-sa
   namespace: {{ .Values.global.operatorNamespace }}
-  annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "1"
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
@@ -13,8 +10,9 @@ metadata:
   name: bedrock-migration-job-role-{{ .Values.global.operatorNamespace }}
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "1"
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 rules: 
 - apiGroups: 
   - operators.coreos.com
@@ -73,8 +71,9 @@ metadata:
   name: bedrock-migration-job-rb-{{ .Values.global.operatorNamespace }}
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "1"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 subjects:
   - kind: ServiceAccount
     name: bedrock-migration-job-sa
@@ -95,8 +94,9 @@ metadata:
   name: bedrock-migration-job-role
   namespace: {{ $namespace }}
   annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "1"
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 rules:
 - apiGroups: 
   - "rbac.authorization.k8s.io"
@@ -125,8 +125,9 @@ metadata:
   name: bedrock-migration-job-rb
   namespace: {{ $namespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "1"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 subjects:
   - kind: ServiceAccount
     name: bedrock-migration-job-sa
