--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -4,8 +4,8 @@ metadata:
   name: bedrock-migration-job
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
-    "helm.sh/hook-delete-policy": before-hook-creation
-    "helm.sh/hook": pre-install
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "2"
 spec:
   template:
