--- a/velero/schedule/zen5-br-scripts-cm.yaml
+++ b/velero/schedule/zen5-br-scripts-cm.yaml
@@ -218,16 +218,16 @@ data:
         
         #[2.2.3] Reset platform metadata and configuration data
         #[2.2.3.1] Reset database
-        return_value=""
-        return_value=$(oc get cm ibm-zen-metastore-edb-cm -o jsonpath='{.data.IS_EMBEDDED_DATABASE}{"\n"}')
-        if [[ $return_value == "true" ]] || [[ $return_value == "" ]]; then
-            info "Value IS_EMBEDDED_DATABASE marked true in configmap ibm-zen-metastore-edb-cm, resetting zen-metastore-edb"
-            info "Reset platform metadata and configuration data"
-            info "Prepping database..."
-            CNPG_PRIMARY_POD=`oc get cluster.postgresql.k8s.enterprisedb.io zen-metastore-edb -o jsonpath="{.status.currentPrimary}" -n $ZEN_NAMESPACE` && oc -n $ZEN_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -c "DROP DATABASE IF EXISTS zen;"  -c "DROP USER IF EXISTS zen_user;" -c "CREATE DATABASE zen;" -c "CREATE USER zen_user;" -c "GRANT CONNECT ON DATABASE zen TO public;" -c "ALTER DATABASE zen OWNER TO zen_user;" -c "GRANT ALL PRIVILEGES ON DATABASE zen to zen_user;"
-        else
-            info "IS_EMBEDDED_DATABASE value false, skipping metastoredb reset."
-        fi
+        # return_value=""
+        # return_value=$(oc get cm ibm-zen-metastore-edb-cm -o jsonpath='{.data.IS_EMBEDDED_DATABASE}{"\n"}')
+        # if [[ $return_value == "true" ]] || [[ $return_value == "" ]]; then
+        #     info "Value IS_EMBEDDED_DATABASE marked true in configmap ibm-zen-metastore-edb-cm, resetting zen-metastore-edb"
+        #     info "Reset platform metadata and configuration data"
+        #     info "Prepping database..."
+        #     CNPG_PRIMARY_POD=`oc get cluster.postgresql.k8s.enterprisedb.io zen-metastore-edb -o jsonpath="{.status.currentPrimary}" -n $ZEN_NAMESPACE` && oc -n $ZEN_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -c "DROP DATABASE IF EXISTS zen;"  -c "DROP USER IF EXISTS zen_user;" -c "CREATE DATABASE zen;" -c "CREATE USER zen_user;" -c "GRANT CONNECT ON DATABASE zen TO public;" -c "ALTER DATABASE zen OWNER TO zen_user;" -c "GRANT ALL PRIVILEGES ON DATABASE zen to zen_user;"
+        # else
+        #     info "IS_EMBEDDED_DATABASE value false, skipping metastoredb reset."
+        # fi
 
         #[2.2.3.2] reset object storage
         #[2.2.3.2.1] read object storage connection and credentials
