--- a/velero/schedule/zen5-br-scripts-cm.yaml
+++ b/velero/schedule/zen5-br-scripts-cm.yaml
@@ -395,7 +395,7 @@ data:
         if [[ $job_exists != "fail" ]]; then
             completed=$(oc get job $job_name -n $ZEN_NAMESPACE --no-headers | awk '{print $2}')
             retry_count=20
-            while [[ $completed != "1/1" ]] && [[ $retry_count > 0 ]]
+            while ([[ $completed != "1/1" ]] && [[ $completed != "Complete" ]]) && [[ $retry_count > 0 ]]
             do
                 info "Wait for job $job_name to complete. Try again in 15s."
                 sleep 15
@@ -403,7 +403,7 @@ data:
                 retry_count=$retry_count-1
             done
 
-            if [[ $retry_count == 0 ]] && [[ $completed != "1/1" ]]; then
+            if [[ $retry_count == 0 ]] && ([[ $completed != "1/1" ]] && [[ $completed != "Complete" ]]); then
                 error "Timed out waiting for job $job_name."
             else
                 info "Job $job_name completed."
