--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
-    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "2"
 spec:
   template:
@@ -130,6 +130,7 @@ spec:
                 fi
                 echo "Namespace $ns complete."
             done
+            oc delete serviceaccount bedrock-migration-job-sa -n $operatorNamespace --ignore-not-found
       restartPolicy: Never
       serviceAccount: bedrock-migration-job-sa
       imagePullSecrets:
