--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -31,7 +31,7 @@ metadata:
           },
           "spec": {
             "license": {
-              "accept": {{ .Values.global.licenseAccept }}
+              "accept": {{ .Values.global.licenseAccept | default "false" }}
             },
             "operatorNamespace": "{{ .Values.global.operatorNamespace }}",
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
