change preinstall hook to post install post upgrade

--- a/bedrock-migration/templates/rbac.yaml
+++ b/bedrock-migration/templates/rbac.yaml
@@ -10,7 +10,7 @@ metadata:
   name: bedrock-migration-job-role-{{ .Values.global.operatorNamespace }}
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 rules: 
@@ -71,7 +71,7 @@ metadata:
   name: bedrock-migration-job-rb-{{ .Values.global.operatorNamespace }}
   namespace: {{ .Values.global.operatorNamespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "1"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 subjects:
@@ -94,7 +94,7 @@ metadata:
   name: bedrock-migration-job-role
   namespace: {{ $namespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 rules:
@@ -125,7 +125,7 @@ metadata:
   name: bedrock-migration-job-rb
   namespace: {{ $namespace }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "1"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
 subjects:
