--- a/bedrock-migration/templates/rbac.yaml
+++ b/bedrock-migration/templates/rbac.yaml
@@ -3,6 +3,9 @@ kind: ServiceAccount
 metadata:
   name: bedrock-migration-job-sa
   namespace: {{ .Values.global.operatorNamespace }}
+  annotations:
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-weight": "0"
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
