--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -35,7 +35,7 @@ metadata:
             },
             "operatorNamespace": "{{ .Values.global.operatorNamespace }}",
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
-            "size": "{{ .Values.commonServiceSpec.size }}",
+            "size": "{{ .Values.cpfs.commonServiceSpec.size }}",
             "storageClass": "{{ .Values.global.blockStorageClass }}"
           }
         }
