change size value location (#2510)
* change size value location

* change cr configuration location

* simplify size parameter

* simplify size parameter

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -35,7 +35,7 @@ metadata:
             },
             "operatorNamespace": "{{ .Values.global.operatorNamespace }}",
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
-            "size": "{{ .Values.commonServiceSpec.size }}",
+            "size": "{{ .Values.cpfs.size }}",
             "storageClass": "{{ .Values.global.blockStorageClass }}"
           }
         }
