--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -58,8 +58,8 @@ spec:
         - iam-chart
         - iam-cluster
         - nss-cluster
-        - licensing-cluster
-        - licensing-chart
+        - ls-cluster
+        - ls-chart
         - lsr-cluster
         - lsr-chart
         - ibm-cm-chart
