add permissions for PostgreSQL clusters
Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -273,3 +273,10 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - postgresql.k8s.enterprisedb.io
+  resources:
+  - clusters
+  verbs:
+  - get
+  - list
