--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -235,5 +235,12 @@ rules:
       - patch
       - update
       - watch
+  - apiGroups:
+      - postgresql.k8s.enterprisedb.io
+    resources:
+      - clusters
+    verbs:
+      - get
+      - list
 ---
 {{- end }}
