Add functionality to wait for Postgres Cluster image updates before applying configuration setting (#2534)
* Add functionality to wait for Postgres Cluster image updates before applying configuration setting

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* add permissions for PostgreSQL clusters

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* Add check for Postgres Cluster CRD existence before image update

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

---------

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -615,6 +615,13 @@ spec:
                 - patch
                 - update
                 - watch
+            - apiGroups:
+                - postgresql.k8s.enterprisedb.io
+              resources:
+                - clusters
+              verbs:
+                - get
+                - list
           serviceAccountName: ibm-common-service-operator
     strategy: deployment
   installModes:
