--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -265,3 +265,10 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - postgresql.k8s.enterprisedb.io
+  resources:
+  - clusters
+  verbs:
+  - get
+  - list
