--- a/velero/restore/restore-nss.yaml
+++ b/velero/restore/restore-nss.yaml
@@ -15,6 +15,10 @@ spec:
   hooks: {}
   includedNamespaces:
   - '*'
-  labelSelector:
-    matchLabels:
-      foundationservices.cloudpak.ibm.com: nss
+  orLabelSelectors:
+  - matchExpressions:
+    - key: foundationservices.cloudpak.ibm.com
+      operator: In
+      values:
+      - nss-cluster
+      - nss
