Add component label to NetworkPolicy resources for Flink and OpenSearch
Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

--- a/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operator.yaml
+++ b/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operator.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: egress-ibm-flink-operator
   namespace: "opNamespace"
+  labels:
+    component: cpfs3
 spec:
   podSelector: 
     matchLabels:
