--- a/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operand.yaml
+++ b/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operand.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: egress-ibm-opensearch-operand
   namespace: "opensearchNamespace"
+  labels:
+    component: cpfs3
 spec:
   podSelector: 
     matchLabels:
