--- a/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
+++ b/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: ingress-ibm-flink-operand
   namespace: "flinkNamespace"
+  labels:
+    component: cpfs3
 spec:
   podSelector: 
     matchLabels:
