--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: ingress-ibm-opensearch-operator
   namespace: "opNamespace"
+  labels:
+    component: cpfs3
 spec:
   podSelector: 
     matchLabels:
