use common label for cm ns, og and catalog
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
+++ b/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
@@ -56,16 +56,16 @@ spec:
       type: resource
     - includedResourceTypes:
         - catalogsources.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      labelSelector: foundationservices.cloudpak.ibm.com=catalog
       name: cert-manager-catalog
       type: resource
     - includeClusterResources: true 
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      labelSelector: foundationservices.cloudpak.ibm.com=namespace
       name: cert-manager-namespace
       type: resource
     - includedResourceTypes:
         - operatorgroups.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      labelSelector: foundationservices.cloudpak.ibm.com=operatorgroup
       name: cert-manager-operatorgroup
       type: resource
     - includedResourceTypes:
