Create singleton recipe for Cert Manager (#2328)
* create cert manager BR workflows

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* update label script with adding cert manager config

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* add condition check before backup and restore

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* update full recipe for cert maanger changes

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* create label cert manager script

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* create job for labeling singleton cert manager

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* add cluste role and rb for catalog

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* including cert and issuer crd in label scripts

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* bring back cert manager workload resources for 4.7 recipe

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* remove webhook deployment check

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* use singleton-subscription as cm sub label for backward compatibility

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* use common label for cm ns, og and catalog

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
@@ -32,7 +32,7 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-crd
+      name: cert-manager-crds
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=licensing
       name: licensing-resources
@@ -88,6 +88,11 @@ spec:
         - subscriptions.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
       name: singleton-subscriptions
+      type: resource
+    - includedResourceTypes:
+        - subscriptions.operators.coreos.com
+      labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
+      name: cert-manager-subscription
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -369,15 +374,15 @@ spec:
         - group: pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
+        - group: cert-manager-subscription
+        - group: cert-manager-resources
         - group: common-services-configmaps
         - group: commonservices-crd
         - group: commonservice-cr
         - group: nss-resources
         - group: cs-operator-permissions
         - group: singleton-subscriptions
-        - group: cert-manager-resources
         - group: common-services-subscriptions
-        - group: cert-manager-workload-resources
         - group: operand-resources
         - group: odlm-resources
         - group: licensing-resources
@@ -390,11 +395,15 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: cert-manager-crd
-        - group: singleton-subscriptions
+        - group: cert-manager-crds
+        - group: cert-manager-workload-resources
+        - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
-        - group: cert-manager-workload-resources
+        - group: singleton-subscriptions
+        - group: common-services-configmaps
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: licensing-resources
         # restore common services
         - group: common-services-configmaps
