--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
@@ -12,7 +12,7 @@ spec:
         - certificates.cert-manager.io
         - issuers.cert-manager.io
         # - clusterissuers.cert-manager.io
-        # - certmanagerconfigs.operator.ibm.com
+        - certmanagerconfigs.operator.ibm.com
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
       name: cert-manager-resources
@@ -21,7 +21,16 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-crd
+      name: cert-manager-crds
+      type: resource
+    - backupRef: cert-manager-resources
+      includeClusterResources: true
+      includedResourceTypes:
+        - secrets
+        - certificates.cert-manager.io
+        - issuers.cert-manager.io
+        - certmanagerconfigs.operator.ibm.com
+      name: cert-manager-workload-resources
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -126,6 +135,11 @@ spec:
         - subscriptions.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
       name: singleton-subscriptions
+      type: resource
+    - includedResourceTypes:
+        - subscriptions.operators.coreos.com
+      labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
+      name: cert-manager-subscription
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
@@ -251,7 +265,7 @@ spec:
           timeout: 600
       labelSelector: app.kubernetes.io/name=cert-manager
       name: cert-manager-operator-check
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: pod
       timeout: 600
@@ -263,7 +277,7 @@ spec:
           timeout: 600
       name: cert-manager-webhook-check
       nameSelector: cert-manager-webhook
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
@@ -404,12 +418,13 @@ spec:
         - group: pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: common-services-configmaps
+        - group: cert-manager-subscription
+        - group: cert-manager-resources
         - group: license-service-reporter-crd
+        - group: common-services-configmaps
         - group: commonservice-crd
         - group: commonservice-cr
         - group: singleton-subscriptions
-        - group: cert-manager-resources
         - group: licensing-resources
         - group: license-service-reporter-subscriptions
         - group: common-services-subscriptions
@@ -423,15 +438,16 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: common-services-configmaps
-        - group: commonservice-crd
-        - group: cert-manager-crd
-        - group: license-service-reporter-crd
-        - group: singleton-subscriptions
-        - group: commonservice-cr
+        - group: cert-manager-crds
+        - group: cert-manager-workload-resources
+        - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
-        - group: cert-manager-resources
+        - group: license-service-reporter-crd
+        - group: singleton-subscriptions
+        - group: common-services-configmaps
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: licensing-resources
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
