Enable user-defined catalog source and namespace in CS CR (#2543)
* config catalog source and namespace in CS cr

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* move the catalog source and ns back to the opreg entry

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* enhance removal custom catalog logic

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* deny if only source name or namespace provided

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* remove catalog check for non master CS CR

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/bundle/manifests/operator.ibm.com_commonservices.yaml
+++ b/bundle/manifests/operator.ibm.com_commonservices.yaml
@@ -288,7 +288,7 @@ spec:
                       services is using
                     type: string
                   catalogNamespace:
-                    description: CatalogNamespace is the namesapce of the CatalogSource
+                    description: CatalogNamespace is the namespace of the CatalogSource
                     type: string
                   configurable:
                     description: |-
