Add update permissions on PostgreSQL Cluster CR
Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -23,14 +23,8 @@ metadata:
     capabilities: Seamless Upgrades
     cloudPakThemesVersion: styles467.css
     containerImage: icr.io/cpopen/common-service-operator:4.6.15
-    createdAt: "2025-03-06T19:45:25Z"
+    createdAt: "2025-06-06T02:09:35Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
-    nss.operator.ibm.com/managed-operators: ibm-common-service-operator
-    nss.operator.ibm.com/managed-webhooks: ""
-    olm.skipRange: ">=3.3.0 <4.6.15"
-    operatorChannel: v4.6
-    operatorVersion: 4.6.15
-    operators.openshift.io/infrastructure-features: '["disconnected"]'
     features.operators.openshift.io/disconnected: "true"
     features.operators.openshift.io/fips-compliant: "true"
     features.operators.openshift.io/proxy-aware: "false"
@@ -38,6 +32,12 @@ metadata:
     features.operators.openshift.io/token-auth-aws: "false"
     features.operators.openshift.io/token-auth-azure: "false"
     features.operators.openshift.io/token-auth-gcp: "false"
+    nss.operator.ibm.com/managed-operators: ibm-common-service-operator
+    nss.operator.ibm.com/managed-webhooks: ""
+    olm.skipRange: ">=3.3.0 <4.6.15"
+    operatorChannel: v4.6
+    operatorVersion: 4.6.15
+    operators.openshift.io/infrastructure-features: '["disconnected"]'
     operators.operatorframework.io/builder: operator-sdk-v1.38.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
     repository: https://github.com/IBM/ibm-common-service-operator
@@ -622,6 +622,7 @@ spec:
               verbs:
                 - get
                 - list
+                - update
           serviceAccountName: ibm-common-service-operator
     strategy: deployment
   installModes:
