--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -617,6 +617,7 @@ spec:
               verbs:
                 - get
                 - list
+                - update
           serviceAccountName: ibm-common-service-operator
     strategy: deployment
   installModes:
