--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
@@ -3,21 +3,34 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: ingress-ibm-opensearch-operand
   namespace: "opensearchNamespace"
+  labels:
+    component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/managed-by: ibm-elasticsearch
+      cluster.opensearch.cloudpackopen.ibm.com: opensearch-cr
   ingress:
     - ports:
-      - protocol: TCP
-        port: 443
-      - protocol: TCP
-        port: 19300
-      - protocol: TCP
-        port: 9300
-      - protocol: TCP
-        port: 9200
+        - protocol: TCP
+          port: 9200
+          endPort: 9300
+        - protocol: TCP
+          port: 9300
+          endPort: 9400
       from:
-        - podSelector: {}
+        - podSelector:
+            matchLabels:
+              cluster.opensearch.cloudpackopen.ibm.com: opensearch-cr
+    - ports:
+        - protocol: TCP
+          port: 9200
+        - protocol: TCP
+          port: 2112
+        - protocol: TCP
+          port: 9300
+      from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: "opensearchNamespace"
   policyTypes:
     - Ingress
