update test vals
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
@@ -25,7 +25,7 @@ spec:
           timeout: 600
       name: nss-check
       nameSelector: ibm-namespace-scope-operator
-      namespace: <operator namespace>
+      namespace: cs-op
       onError: fail
       selectResource: deployment
       timeout: 600
