add child recipes wo backupref
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
@@ -14,6 +14,7 @@ spec:
         - rolebindings
         - serviceaccounts
         - namespacescopes.operator.ibm.com
+        #- subscriptions.operators.coreos.com TODO change labeling script to label nss sub as nss, verify matches manual labeling instructions
       labelSelector: foundationservices.cloudpak.ibm.com=nss
       name: nss-resources
       type: resource
