test different namespace child recipe deploy
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/child-nss-recipe.yaml
@@ -5,7 +5,7 @@ metadata:
     dp.isf.ibm.com/parent-recipe: cpfs-parent-recipe
     dp.isf.ibm.com/parent-recipe-namespace: ibm-fusion
   name: nss-child
-  namespace: ibm-fusion
+  namespace: cs-serv
 spec:
   appType: common-service
   groups:
