--- a/velero/spectrum-fusion/recipes/dynamic-recipes/child-csdb-recipe-2.10.0.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/child-csdb-recipe-2.10.0.yaml
@@ -5,7 +5,7 @@ metadata:
     dp.isf.ibm.com/parent-recipe: cpfs-parent-recipe
     dp.isf.ibm.com/parent-recipe-namespace: ibm-fusion
   name: csdb-child
-  namespace: ibm-fusion
+  namespace: cs-serv
 spec:
   appType: common-service
   groups:
