--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-csdb-recipe-2.10.0.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-csdb-recipe-2.10.0.yaml
@@ -3,9 +3,9 @@ kind: Recipe
 metadata:
   labels:
     dp.isf.ibm.com/parent-recipe: cpfs-parent-recipe
-    dp.isf.ibm.com/parent-recipe-namespace: ibm-fusion
+    dp.isf.ibm.com/parent-recipe-namespace: <fusion namespace>
   name: csdb-child
-  namespace: cs-serv
+  namespace: <child recipe namespace>
 spec:
   appType: common-service
   groups:
@@ -35,7 +35,7 @@ spec:
           timeout: 600
       labelSelector: 'k8s.enterprisedb.io/cluster=common-service-db,role=primary'
       name: common-service-db-check
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: pod
       timeout: 600
@@ -47,7 +47,7 @@ spec:
           timeout: 600
       labelSelector: foundationservices.cloudpak.ibm.com=cs-db-data
       name: cs-db-deployment
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: pod
       timeout: 600
@@ -59,7 +59,7 @@ spec:
           timeout: 600
       name: platform-identity-provider
       nameSelector: platform-identity-provider
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
@@ -71,7 +71,7 @@ spec:
           timeout: 600
       name: platform-auth-service
       nameSelector: platform-auth-service
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
@@ -83,18 +83,18 @@ spec:
           timeout: 600
       name: platform-identity-management
       nameSelector: platform-identity-management
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
       type: check
     - labelSelector: foundationservices.cloudpak.ibm.com=cs-db-data
       name: cs-db-data
-      namespace: cs-serv
+      namespace: <child recipe namespace>
       onError: fail
       ops:
         - command: |
-            ["/bin/bash", "-c", "/cs-db/br_cs-db.sh backup cs-serv"]
+            ["/bin/bash", "-c", "/cs-db/br_cs-db.sh backup <child recipe namespace>"]
           container: cs-db-br
           name: cs-db-backup-pre
           timeout: 600
@@ -104,7 +104,7 @@ spec:
           name: cs-db-backup-post
           timeout: 600
         - command: |
-            ["/bin/bash", "-c", "sleep 120 && /cs-db/br_cs-db.sh restore cs-serv"]
+            ["/bin/bash", "-c", "sleep 120 && /cs-db/br_cs-db.sh restore <child recipe namespace>"]
           container: cs-db-br
           name: restore
           timeout: 2000
@@ -136,6 +136,4 @@ spec:
         - hook: platform-identity-management/podReady
         - hook: platform-auth-service/podReady
         - hook: platform-identity-provider/podReady
-        - hook: cs-db-data/restore
-    #TODO add priorities
     
