use same names for namespace placeholders
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
@@ -7,9 +7,12 @@ spec:
   enableDR: false
   includedNamespaces:
     #default namespaces for licensing, cert manager, and reporter operators
-    - ibm-cert-manager
-    - ibm-licensing
-    - ibm-ls-reporter
+    #- ibm-cert-manager
+    #- ibm-licensing
+    #- ibm-ls-reporter
+    - <cert manager namespace>
+    - <licensing namespace>
+    - <lsr namespace>
 
 ---
 
