initial updates for fusion automation update
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -24,9 +24,14 @@ STORAGE_SECRET_ACCESS_KEY= #secret access key from s3 storage
 STORAGE_SECRET_ACCESS_KEY_ID= #access key id from s3 storage
 CERT_MANAGER_NAMESPACE="ibm-cert-manager" #default
 LICENSING_NAMESPACE="ibm-licensing" #defaul
-LSR_NAMESPACE="ibm-lsr" #default
-CPFS_VERSION="4.9" #default
+LSR_NAMESPACE="ibm-ls-reporter" #default
+CPFS_VERSION="4.14" #default
 ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
+DYNAMIC="true" #false uses old recipes
+#below only used if DYNAMIC==true
+IM_ENABLED="true"
+ZEN_ENABLED="true"
+NSS_ENABLED="true"
 
 #label-common-services specific env variables
 # disable labeling of cert manager, licensing, and LSR resources by changing value to 0
