--- a/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/parent-singleton-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/parent-singleton-recipe.yaml
@@ -6,6 +6,13 @@ metadata:
 spec:
   appType: singleton
   groups:
+    - includedNamespaces:
+        - openshift-config
+      includedResourceTypes:
+        - secrets
+      labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
+      name: pull-secret
+      type: resource
     - includedResourceTypes:
         - catalogsources.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=catalog
@@ -35,6 +42,7 @@ spec:
     - name: backup
       sequence:
         - group: namespace
+        - group: pull-secret
         - group: operatorgroup
         - group: catalogsource
         - group: subscription
@@ -42,6 +50,7 @@ spec:
     - name: restore
       sequence: 
         - group: namespace
+        - group: pull-secret
         - group: operatorgroup
         - group: catalogsource
         - group: subscription
