standardize parameter used
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-csdb-recipe-2.10.0.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-csdb-recipe-2.10.0.yaml
@@ -3,7 +3,7 @@ kind: Recipe
 metadata:
   labels:
     dp.isf.ibm.com/parent-recipe: cpfs-parent-recipe
-    dp.isf.ibm.com/parent-recipe-namespace: <fusion namespace>
+    dp.isf.ibm.com/parent-recipe-namespace: <parent recipe namespace>
   name: csdb-child
   namespace: <child recipe namespace>
 spec:
