create separate singleton and core policy assignments
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
@@ -38,7 +38,7 @@ spec:
 apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: PolicyAssignment
 metadata:
-  name: cs-policy-assignment
+  name: cs-singleton-policy-assignment
   namespace: <fusion ns>
 spec:
   application: cs-singleton
