--- a/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/peripheral-resources.yaml
@@ -1,3 +1,38 @@
+#only uncomment the backup storage location secret and CR if one is not already created. 
+#fusion setup script creates one by default with the same info and different applications can share
+# kind: Secret
+# apiVersion: v1
+# metadata:
+#   name: <location name>-secret-0
+#   namespace: <fusion ns>
+#   labels:
+#     dp.isf.ibm.com/ownedBy: fbsl
+#     dp.isf.ibm.com/provider-name: isf-backup-restore
+# data:
+#   access-key-id: <base 64 encoded access key id>
+#   secret-access-key: <base 64 encoded secret access key>
+# type: Opaque
+
+# ---
+
+# apiVersion: data-protection.isf.ibm.com/v1alpha1
+# kind: BackupStorageLocation
+# metadata:
+#   name: <location name>
+#   namespace: <fusion ns>
+#   finalizers:
+#     - backupstoragelocation
+#   labels:
+#     dp.isf.ibm.com/backupstoragelocation-type: ibm
+#     dp.isf.ibm.com/provider-name: isf-backup-restore
+# spec:
+#   credentialName: <location name>-secret-0
+#   params:
+#     bucket: <bucket name>
+#     endpoint: <s3 url>
+#   provider: isf-backup-restore
+#   type: ibm
+# ---
 apiVersion: application.isf.ibm.com/v1alpha1
 kind: Application
 metadata:
@@ -48,38 +83,3 @@ spec:
     name: cpfs-singleton-parent-recipe
     namespace: <fusion ns>
   runNow: false
-
----
-
-kind: Secret
-apiVersion: v1
-metadata:
-  name: <location name>-secret-0
-  namespace: <fusion ns>
-  labels:
-    dp.isf.ibm.com/ownedBy: fbsl
-    dp.isf.ibm.com/provider-name: isf-backup-restore
-data:
-  access-key-id: <base 64 encoded access key id>
-  secret-access-key: <base 64 encoded secret access key>
-type: Opaque
-
----
-
-apiVersion: data-protection.isf.ibm.com/v1alpha1
-kind: BackupStorageLocation
-metadata:
-  name: <location name>
-  namespace: <fusion ns>
-  finalizers:
-    - backupstoragelocation
-  labels:
-    dp.isf.ibm.com/backupstoragelocation-type: ibm
-    dp.isf.ibm.com/provider-name: isf-backup-restore
-spec:
-  credentialName: <location name>-secret-0
-  params:
-    bucket: <bucket name>
-    endpoint: <s3 url>
-  provider: isf-backup-restore
-  type: ibm
