--- a/velero/spectrum-fusion/templates/sf-restore-singleton.yaml
+++ b/velero/spectrum-fusion/templates/sf-restore-singleton.yaml
@@ -2,7 +2,7 @@ apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: Restore
 metadata:
   name: <restore name>
-  namespace: ibm-spectrum-fusion-ns
+  namespace: <fusion ns>
   finalizers:
     - restore
   labels:
@@ -16,8 +16,5 @@ spec:
     RESOURCES:
       - ALL
     v1/persistentvolumeclaim:
-      - <operator_ns>/setup-tenant-job-pvc
-      - <services_ns>/cs-db-backup-pvc
-      - <services_ns>/zen5-backup-pvc
       - <lsr_ns>/lsr-backup-pvc
   targetCluster: <Cluster CR name only for restores to spoke cluster>
