Moved NetworkPolicy file location into the proper subfolder

--- a/cp3-networkpolicy/ingress/services/access-to-usage-metering-service.yaml
+++ b/cp3-networkpolicy/ingress/services/access-to-usage-metering-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: access-to-ibm-usage-metering-instance
   namespace: "csNamespace"
   labels:
-    component: cpfs
+    component: cpfs3
 spec: 
   podSelector: 
     matchLabels: 
