Revert "update flink ports"
This reverts commit 5bf1225e2ead027fb3752035b0642876a26dde92.

--- a/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operator.yaml
+++ b/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operator.yaml
@@ -6,10 +6,16 @@ metadata:
   labels:
     component: cpfs3
 spec:
-  podSelector:
+  podSelector: 
     matchLabels:
       app.kubernetes.io/name: flink-kubernetes-operator
   ingress:
-    - {}
+    - ports:
+      - protocol: TCP
+        port: 443
+      - protocol: TCP
+        port: 6443
+      from:
+        - podSelector: {}
   policyTypes:
     - Ingress
