Update fusion testing automation scripts to account for new dynamic recipes (#2569)
* initial updates for fusion automation update

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* standardize parameter used

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* populate secret

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change parent recipe namespace

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update call to labeling script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* create separate singleton and core policy assignments

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove cluster role and rb from lsr recipe

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* expand labeling script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove storage location from singleton resources

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update backup and restore logic to accoutn for separation of singleton and core recipes

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* typo

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update namespace

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add subscription to nss recipe

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

---------

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/child-ls-reporter-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/singletons/child-ls-reporter-recipe.yaml
@@ -2,7 +2,7 @@ apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
 kind: Recipe
 metadata:
   name: child-license-reporter-recipe
-  namespace: <fusion ns>
+  namespace: <lsr namespace>
   labels:
     dp.isf.ibm.com/parent-recipe: cpfs-singleton-parent-recipe
     dp.isf.ibm.com/parent-recipe-namespace: <fusion ns>
@@ -30,8 +30,6 @@ spec:
         - role
         - rolebinding
         - configmaps
-        - clusterrole
-        - clusterrolebinding
       name: lsr-pre-deploy
       type: resource
       labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
