--- a/velero/spectrum-fusion/templates/sf-restore-core.yaml
+++ b/velero/spectrum-fusion/templates/sf-restore-core.yaml
@@ -1,21 +1,21 @@
 apiVersion: data-protection.isf.ibm.com/v1alpha1
-kind: Backup
+kind: Restore
 metadata:
-  name: <backup name>
+  name: <restore name>
   namespace: <fusion ns>
   finalizers:
-    - backup
+    - restore
   labels:
     dp.isf.ibm.com/application-name: <application name>
     dp.isf.ibm.com/backuppolicy-name: <backup policy name>
     dp.isf.ibm.com/backupstoragelocation-name: <backup storage location name>
     dp.isf.ibm.com/provider-name: isf-backup-restore
 spec:
-  application: <application name>
-  backupPolicy: <backup policy name>
-  appCluster: <Cluster CR name only for backups on spoke cluster>
-  recipe:
-    name: <recipe name>
-    namespace: <recipe namespace>
-    apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
-    kind: Recipe
+  backup: <backup name>
+  objectsToRestore:
+    RESOURCES:
+      - ALL
+    v1/persistentvolumeclaim:
+      - <services_ns>/cs-db-backup-pvc
+      - <services_ns>/zen5-backup-pvc
+  targetCluster: <Cluster CR name only for restores to spoke cluster>
