add ums labeling automation and br resources
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/common-service/label-bedrock-role.yaml
+++ b/velero/backup/common-service/label-bedrock-role.yaml
@@ -32,5 +32,7 @@ rules:
       - roles
       - rolebindings
       - serviceaccount
+      - ibmusagemeterings
+      - ibmservicemeterdefinitions
       #not necessary for cpd
       #- ibmlicenseservicereporters.operator.ibm.com
